gosuc: switch incremental dep tracking to a bytecode-driven visitor
Replace the AST-based per-class dependency walker in GosuCompiler with
a two-phase ASM ClassVisitor (DependenciesClassVisitor) plus a narrow
AST fallback for compile-time-only references that don't survive into
bytecode. Ownership of dependency extraction moves out of GosuCompiler
-- which now delegates to _incrementalManager.trackDependencies once
per generated .class file -- and into IncrementalCompilationManager.

Highlights:

* DependenciesClassVisitor.java (new) does the two-phase walk:
  constant-pool scan in the constructor (fast O(n) sweep over
  CONSTANT_Class entries) and structural ClassVisitor callbacks via
  reader.accept (signatures, annotations, exceptions, method-body
  refs the constant pool alone wouldn't surface).

* IncrementalCompilationManager owns trackDependencies and a narrow
  trackTypeliteralsFromAST pass. The AST pass is gated by
  element.getGosuClass() == gsClass so each nested class / block /
  anonymous body is only walked under its own invocation, driven by
  populateGosuClassFile's recursion over getInnerClasses().

* Filter logic consolidated: shouldTrackJavaType + shouldTrackGosuType
  + computeShouldTrackGosuType + the per-instance shouldTrackGosuCache
  collapse into a single shouldTrackType(String) backed by a
  gosuFqcnToSourcePath map built once at construction.

* getGosuFilePathFromFqcn resolves bytecode-style FQCNs back to their
  source file via longest-'$'-prefix match. Handles both inner-class
  FQCNs (Outer$Inner -> Outer.gs) and the prefix-collision case where
  a top-level class name itself contains '$' (Outer.gs alongside
  Outer$Class.gs, looking up Outer$Class$Inner correctly returns the
  longer match).

* calculateRecompilationSet pre-populates typeDependencies with
  Collections.emptySet() for every seed FQCN, so the BFS body iterates
  consumers without a null guard. Defends against net-new files whose
  FQCN has no entry in the previous build